# PyWEB_homework_mod_13

./: README.md
part1_fastapi/: main.py  pyproject.toml
part1_fastapi/src/conf/: config.py
part1_fastapi/src/repository/: contacts.py  users.py
part1_fastapi/src/routes/: auth.py  contacts.py  users.py
part1_fastapi/src/schemas/: contact.py  user.py
part1_fastapi/src/services/: auth.py  email.py
part2_django/: pyproject.toml
part2_django/hw10_django/hw10_django/: asgi.py  settings.py  wsgi.py
part2_django/hw10_django/quotes/: forms.py  models.py  urls.py  utils.py  views.py
part2_django/hw10_django/quotes/migrations/: 0001_initial.py
part2_django/hw10_django/quotes/static/quotes/: style.css
part2_django/hw10_django/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  author.html  base.html  find_tag.html  index.html
part2_django/hw10_django/users/: forms.py  urls.py  views.py
part2_django/hw10_django/users/templates/users/: login.html  logout.html  signup.html
part2_django/hw10_django/utils/: migration.py  seed.py
