[tool.poetry]
name = "pyweb-homework-mod-10-test-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
psycopg2 = "^2.9.9"
requests = "^2.31.0"
bs4 = "^0.0.1"
pymongo = "^4.6.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
